thymeleaf 관련 소스 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+#Live Reload 활성화
+spring.devtools.livereload.enabled=true
+
+#Thymeleaf cache 사용 중지
+spring.thymeleaf.cache = false
