메타코드 업로드 모듈 작성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,21 @@ spring.jpa.properties.hibernate.format_sql=true
 #??? ???? ???? ??? ???? ??
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.hibernate.ddl-auto=validate
 
+#spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
+#spring.datasource.url=jdbc:mariadb://localhost:3306/shop?characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/shop?characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.username=sa
+spring.datasource.password=12345
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #Live Reload 활성화
 spring.devtools.livereload.enabled=true
