--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #??? ???? ???? ??? ???? ??
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 #spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 #spring.datasource.url=jdbc:mariadb://localhost:3306/shop?characterEncoding=UTF-8
