--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,25 @@
-#?????? ?? ??
+#어플리케이션 포트 설정
 server.port=80
 application.name = shop
 
-#???? ?? ?? ??
+#실행되는 쿼리 콘솔 출력
 spring.jpa.properties.hibernate.show_sql=true
 
-#???? ???? ??? ???? ?? ???
+#콘솔창에 출력되는 쿼리를 가독성이 좋게 포맷팅
 spring.jpa.properties.hibernate.format_sql=true
 
-#??? ???? ???? ??? ???? ??
+#쿼리에 물음표로 출력되는 바인드 파라미터 출력
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-spring.jpa.hibernate.ddl-auto=create
+#데이터베이스 초기화 전략
+spring.jpa.hibernate.ddl-auto=validate
 
+#테이터베이스 관련 설정
 #spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 #spring.datasource.url=jdbc:mariadb://localhost:3306/shop?characterEncoding=UTF-8
 #spring.datasource.username=root
 #spring.datasource.password=root
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#
 
 #spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
@@ -35,3 +36,15 @@ spring.thymeleaf.cache = false
 
 #swagger 3.0 사용시 오류 해결
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+#파일 한 개당 최대 사이즈
+spring.servlet.multipart.maxFileSize=20MB
+
+#요청당 최대 파일 크기
+spring.servlet.multipart.maxRequestSize=100MB
+
+#상품 이미지 업로드 경로
+itemImgLocation=C:/shop/item
+
+#리소스 업로드 경로
+uploadPath=file:///c:/shop/
